Revision history for Perl extension Statistics::R.

0.xx  
    - Fixed RT bug #71988 (patch by dheiman)

0.22  2011-10-09
    - The run() method now accepts an array of strings as input
    - New run_from_file() method to read and execute commands from an R file
    - Better detection of R errors by using the R exception system (issue
      reported by Mike Imelfort)
    - Updated error handling mechanism to detect R syntax errors in addition
      to R runtime errors
    - Tests now work for different locales (issue reported by Knut Behrends)

0.21  2011-09-04
    - Tweaked the regular expressions that parse the R output stream for added
      speed and robustness

0.20  2011-08-31
    - Refactored the entire R communication bridge to avoid writing and reading
      files. All data is now stored in memory and passed by pipes. This fixes
      bug RT #11309, #11918, #66190 and #70314
    - Refactored the communications in shared mode
    - Put platform-specific code and legacy code in separate modules

0.10  2011-08-27  
    - Refactoring to remove old code doing platform-specific operations.
    - Lots of code cleanup
    - Removed the now useless r_dir and tmp_dir options of new()
    - Fix for change of dir bug (RT #6724). Also fixes missing synopsis file (RT #70307)
    - More subtle cleanup procedure (RT #70392)

0.09  2011-08-23 
    - Changes in the new() method:
       * it automatically calls start()
       * it has the 'shared' option to start a shared bridge
    - More portable filenames (RT #70391)
    - Added convenience methods:
       * run() replaces send() and read() and checks for errors (RT #70361)
       * get() fetches the values in an R vector (RT #70361)
       * set() assigns values to an R vector
    - Fixed a bug in the unlock() method
    - Removed the R() and error() methods and renamed some other. These changes
      should be transparent and backward compatible